[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/Yeti.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Game.gd" type="Script" id=2]
[ext_resource path="res://YetiScenes/YetiShadow.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/Background/SnowBorderBig.png" type="Texture" id=5]
[ext_resource path="res://Scenes/SnowBorder.gd" type="Script" id=6]
[ext_resource path="res://Sprites/Background/Mountain3.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Background/Mountains2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Background/Mountains1.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Background/Mountain4.png" type="Texture" id=10]
[ext_resource path="res://Scenes/ParallaxBackground.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Font.tres" type="DynamicFont" id=12]
[ext_resource path="res://Scenes/GUI.gd" type="Script" id=15]
[ext_resource path="res://Sounds/TitleScreenDraft01.mp3" type="AudioStream" id=16]
[ext_resource path="res://Scenes/Snowflakes.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/Avalanche.tscn" type="PackedScene" id=18]
[ext_resource path="res://Sprites/GUI/HeartsCold.png" type="Texture" id=19]
[ext_resource path="res://Sprites/GUI/Hearts.png" type="Texture" id=20]

[sub_resource type="Animation" id=2]
resource_name = "Eat"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, -2, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.02, 1.02 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, -2, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 23 ), Vector2( 0, 26 ), Vector2( 0, 23 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, -2, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.02, 1.02 ), Vector2( 1, 1 ) ]
}

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="Background" type="CanvasLayer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="Background"]
offset = Vector2( 175.035, 24.152 )
rotation = 0.0994837
scale = Vector2( 1.2, 1.2 )
transform = Transform2D( 1.19407, 0.119184, -0.119184, 1.19407, 175.035, 24.152 )
script = ExtResource( 11 )

[node name="ParallaxLayer1" type="ParallaxLayer" parent="Background/ParallaxBackground"]
motion_mirroring = Vector2( 300, 0 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer1"]
texture = ExtResource( 10 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Background/ParallaxBackground"]
position = Vector2( 0, 18.752 )
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 300, 0 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 7 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Background/ParallaxBackground"]
position = Vector2( 0, 2.354 )
motion_scale = Vector2( 0.2, 1 )
motion_mirroring = Vector2( 300, 0 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer3"]
texture = ExtResource( 8 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="Background/ParallaxBackground"]
position = Vector2( 0, -4.02 )
motion_scale = Vector2( 0.1, 1 )
motion_mirroring = Vector2( 300, 0 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer4"]
texture = ExtResource( 9 )

[node name="SnowBorder" type="ParallaxBackground" parent="Background"]
offset = Vector2( 197.031, -1.02 )
rotation = 0.174533
scale = Vector2( 1.3, 1.3 )
transform = Transform2D( 1.28025, 0.225743, -0.225743, 1.28025, 197.031, -1.02 )
script = ExtResource( 6 )

[node name="ParallaxLayer5" type="ParallaxLayer" parent="Background/SnowBorder"]
position = Vector2( 0, -6.022 )
motion_scale = Vector2( 0.1, 1 )
motion_mirroring = Vector2( 300, 0 )

[node name="Sprite" type="Sprite" parent="Background/SnowBorder/ParallaxLayer5"]
position = Vector2( 0, 11.891 )
texture = ExtResource( 5 )

[node name="Bodies" type="Node2D" parent="."]
position = Vector2( -3.57628e-07, 24 )
rotation = 0.174533

[node name="ColorRect" type="ColorRect" parent="Bodies"]
margin_left = -159.87
margin_top = 0.737793
margin_right = 480.13
margin_bottom = 360.738
color = Color( 0.796078, 0.858824, 0.988235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SnowTrails" type="Node2D" parent="Bodies"]

[node name="Cracks" type="Node2D" parent="Bodies"]
rotation = 2.98023e-08

[node name="Shadows" type="Node2D" parent="Bodies"]
rotation = 1.49012e-08

[node name="YetiShadow" parent="Bodies/Shadows" instance=ExtResource( 3 )]

[node name="Flags" type="Node2D" parent="Bodies"]
rotation = 2.98023e-08

[node name="Trails" type="Node2D" parent="Bodies"]

[node name="YSort" type="YSort" parent="Bodies"]
rotation = 1.49012e-08

[node name="Yeti" parent="Bodies/YSort" instance=ExtResource( 1 )]
position = Vector2( 48, 90 )

[node name="Avalanche" parent="Bodies" instance=ExtResource( 18 )]

[node name="Timers" type="Node2D" parent="."]

[node name="SpawnObstacleTimer" type="Timer" parent="Timers"]
wait_time = 0.8
autostart = true

[node name="SpawnFlags" type="Timer" parent="Timers"]
autostart = true

[node name="Snow" type="CanvasLayer" parent="."]

[node name="Snowflakes" parent="Snow" instance=ExtResource( 17 )]

[node name="GUI" type="MarginContainer" parent="." groups=[
"gui",
]]
anchor_left = 0.05
anchor_top = 0.061
anchor_right = 0.95
anchor_bottom = 0.375
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
margin_right = 288.0
margin_bottom = 56.0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/VBoxContainer"]
margin_right = 288.0
margin_bottom = 19.0

[node name="HumansEaten" type="Label" parent="GUI/VBoxContainer/HBoxContainer"]
margin_right = 276.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = ExtResource( 12 )
text = "HUMANS EATEN:"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberLabel" type="Label" parent="GUI/VBoxContainer/HBoxContainer"]
margin_left = 280.0
margin_right = 288.0
margin_bottom = 19.0
size_flags_vertical = 2
custom_fonts/font = ExtResource( 12 )
text = "0"

[node name="HumansPlayer" type="AnimationPlayer" parent="GUI/VBoxContainer/HBoxContainer"]
anims/Eat = SubResource( 2 )

[node name="HealthContainer" type="HBoxContainer" parent="GUI/VBoxContainer"]
visible = false
margin_top = 23.0
margin_right = 288.0
margin_bottom = 42.0

[node name="Health" type="Label" parent="GUI/VBoxContainer/HealthContainer"]
margin_right = 276.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = ExtResource( 12 )
text = "HEALTH:"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthCount" type="Label" parent="GUI/VBoxContainer/HealthContainer"]
margin_left = 280.0
margin_right = 288.0
margin_bottom = 19.0
size_flags_vertical = 2
custom_fonts/font = ExtResource( 12 )
text = "6"

[node name="HealthBarContainer" type="HBoxContainer" parent="GUI/VBoxContainer"]
margin_top = 23.0
margin_right = 288.0
margin_bottom = 37.0
rect_pivot_offset = Vector2( 19.4152, 83.0101 )

[node name="Label" type="Label" parent="GUI/VBoxContainer/HealthBarContainer"]
margin_bottom = 14.0
size_flags_horizontal = 2
size_flags_vertical = 1

[node name="HealthBar" type="TextureProgress" parent="GUI/VBoxContainer/HealthBarContainer"]
margin_left = 228.0
margin_right = 288.0
margin_bottom = 14.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 29.8871, 1.79433 )
size_flags_horizontal = 0
size_flags_vertical = 3
max_value = 6.0
value = 6.0
texture_under = ExtResource( 19 )
texture_progress = ExtResource( 20 )

[node name="HealthPlayer" type="AnimationPlayer" parent="GUI/VBoxContainer/HealthBarContainer/HealthBar"]
anims/Health = SubResource( 3 )

[node name="Camera" parent="." instance=ExtResource( 4 )]
position = Vector2( 160, 90 )

[node name="Transition" type="CanvasLayer" parent="."]

[node name="WhiteRect" type="ColorRect" parent="Transition"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionTween" type="Tween" parent="Transition"]

[node name="EndTween" type="Tween" parent="Transition"]

[node name="MusicTween" type="Tween" parent="Transition"]

[node name="Music" type="Node2D" parent="."]

[node name="MusicSound" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 16 )
autoplay = true

[connection signal="update_humans_eaten" from="Bodies/YSort/Yeti" to="GUI" method="_on_Yeti_update_humans_eaten"]
[connection signal="timeout" from="Timers/SpawnObstacleTimer" to="." method="_on_SpawnObstacleTimer_timeout"]
[connection signal="timeout" from="Timers/SpawnFlags" to="." method="_on_SpawnFlags_timeout"]
[connection signal="tween_all_completed" from="Transition/EndTween" to="." method="_on_EndTween_tween_all_completed"]
